# styx

./: .dockerignore  .gitignore  EXPLORING_DATA.md  README-frank.md  README.md  docker-compose-kafka.yml  docker-compose-s3.yml  docker-compose.yml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  (+1 more)
coordinator/: aria_sync_metadata.py  capacity_model.py  chronos_forecaster.py  coordinator.dockerfile  coordinator_metadata.py  coordinator_service.py  custom_chronos_forecaster.py  forecaster_factory.py  metric_buffer.py  pid_controller.py  pyproject.toml  requirements.txt  river_forecaster.py  rnn_forecaster.py  sliding_window_metric.py  start-coordinator.sh  worker_pool.py
data/: cluster_summary.csv  cluster_summary_1min.csv
demo/: export_metadata.py  load_generator.py  migration_tracker.py
prometheus/: prometheus.yml
results/: plot_common.py  plot_helper.py  plot_latency.py  plot_latency_ycsb.py  plot_throughput.py  plot_throughput_ycsb.py  plot_workers.py
scripts/: activate_standby_worker.sh  eval-models.py  export_k8s_styx_logs.sh  export_metrics_to_csv.py  manual_scaler.py  offline-analysis.py  plot-experiment-data.py  plot-predictions.py  plot_grafana_metrics.py  run_all_experiments.sh  run_autoscale_experiment.sh  run_custom_autoscale_experiment.sh  run_experiment.sh  run_migration_experiment.sh  simulate_forecast.py  start_styx_cluster.sh  stop_styx_cluster.sh  throughput_logger.py  uninstall_styx_cluster_with_helm.sh  wait_for_styx_k8s.sh
worker/: async_snapshotting.py  boot_worker.py  pyproject.toml  requirements.txt  standby.dockerfile  start-standby.sh  start-worker.sh  worker.dockerfile  worker_service.py
worker/egress/: styx_kafka_batch_egress.py
worker/ingress/: styx_kafka_ingress.py
worker/operator_state/aria/: _fast_copy.pyx  in_memory_state.py
worker/transactional_protocols/: aria.py
worker/util/: phase_resource_tracker.py
(+48 files in other folders)
