[project]
name = "coordinator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cityhash==0.4.10",
    "cloudpickle==3.1.2",
    "confluent-kafka==2.14.0",
    "geopy>=2.4.1",
    "minio==7.2.20",
    "msgspec==0.20.0",
    "prometheus-client==0.24.1",
    "setuptools==80.10.1",
    "styx",
    "uvloop==0.22.1",
    "zstandard==0.25.0",
    "chronos-forecasting==2.2.2",
    "pandas==3.0.1",
    "river==0.24.2",
]

 # Tell uv to override any sub-dependency constraint on pandas and force 3.0.1
    [tool.uv]
    override-dependencies = [
        "pandas==3.0.1"
    ]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
styx = { path = "../styx-package" }
torch = { index = "pytorch-cpu" }
