[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiokafka==0.13.0",
    "cityhash==0.4.10",
    "cloudpickle==3.1.2",
    "geopy>=2.4.1",
    "minio==7.2.20",
    "msgspec==0.20.0",
    "psutil==7.2.1",
    "setuptools==80.10.1",
    "styx",
    "uvloop==0.22.1",
    "zstandard==0.25.0",
]

[tool.uv.sources]
styx = { path = "../styx-package" }
